<resources>
    <string name="app_name">Adventure Service</string>
    <string name="facebook_app_id">322417624831812</string>
    <string name="version">Version  V-2.8</string>
    <string name="increment">+</string>
    <string name="decrement">-</string>
    <string name="display">1</string>


    <!--Pay u Money Detail-->
    <string name="PAYU_Merchant_ID">513338</string>
    <string name="PAYU_Merchant_key">Agh7Qj</string>
    <string name="PAYU_Merchant_salt">wY9k3Ruz</string>

    <!--Prince Dialog-->

    <string name="dialog_default_title">Here\'s a message!</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="LOADING">Loading…</string>

    <string name="rock"><b>Rock Climbing</b></string>
    <string name="rafting"><b>Rafting</b></string>
    <string name="camping"><b>camping</b></string>


    <string name="login_tab"><b>Login</b></string>
    <string name="signup_tab"><b>Create Account</b></string>
    <string name="quote">Life was meant for good friends and great adventures</string>
    <string name="servcies_tab"><b>Services</b></string>
    <string name="destination_tab"><b>Destination</b></string>

    <string name="agree_terms">By Registering you are agreeing to our <b>terms and conditions</b>.</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="product_description">A buyer persona is an imaginary customer. It is the person for
        whom you’ve developed your product and to whom you’d love to sell it (of course!). He or she
        represents your target audience, but is much more real than a vague description of some demographics.
        You need to know your buyer persona so well that you know exactly what makes her laugh, what
        makes her shake her head in disbelief, what makes her click buy, and what makes her hesitate to order.
        To describe your buyer persona, think about what she’s reading and which websites she visits,
        because that will help you understand the right tone of voice that will engage her. Consider
        what keeps her awake at night, what she dreams of achieving, and how she makes decisions,
        because that will enable you to create copy that speaks to her and taps into her feelings.</string>

    <string name="pacakage_description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit
        omnis animi et iure laudantium vitae, praesentium optio, sapiente distinctio illo?Lorem ipsum dolor
        sit amet, consectetur adipisicing elit. Velit omnis animi et iure laudantium vitae, praesentium optio,
        sapiente distinctio illo?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit omnis animi
        et iure laudantium vitae, praesentium optio, sapiente distinctio illo?Lorem ipsum dolor sit amet,
        consectetur adipisicing elit. Velit omnis animi et iure laudantium vitae, praesentium optio, sapiente distinctio illo?</string>

    <string name="mail_website"><![CDATA[Mail & Website]]></string>
    <string name="contact">Contact</string>
    <string name="address">Address</string>
    <string name="rafting_details">Rafting Image</string>
    <string name="information_collect">We collect information from you when you register on our site
        or place an order. When ordering or registering on our site, as appropriate, you may be asked
        to enter the following : "\n" "\t" \u2022 To personalise your experience, your information helps to better
        respond to individual needs.  "\n" "\t" \u2022 To personalise your experience, your information helps to better
        respond to individual needs.  "\n" "\t" \u2022 To personalise your experience, your information helps to better
        respond to individual needs.  "\n" "\t" \u2022 To personalise your experience, your information helps to better
        respond to individual needs. </string>
    <string name="total_amount">Total Amt. : ₹ </string>
    <string name="description">Description :</string>

    <string name="check_in">Check In</string>
    <string name="check_out">Check Out</string>

    <string name="terms_of_use">By downloading, browsing, accessing or using this Sample Store mobile
        application (“Mobile Application”), you agree to be bound by these Terms and Conditions of Use.
        We reserve the right to amend these terms and conditions at any time. If you disagree with
        any of these Terms and Conditions of Use, you must immediately discontinue your access to the
        Mobile Application and your use of the services offered on the Mobile Application.
        Continued use of the Mobile Application will constitute acceptance of these Terms and
        Conditions of Use, as may be amended from time to time.</string>

    <string name="privacy_policy">Adventure Services built the Adventure Services app as a Free app.
        This SERVICE is provided by Adventure Services at no cost and is intended for use as is.This
        page is used to inform visitors regarding our policies with the collection, use, and disclosure
        of Personal Information if anyone decided to use our Service.If you choose to use our Service,
        then you agree to the collection and use of information in relation to this policy. The Personal
        Information that we collect is used for providing and improving the Service. We will not use
        or share your information with anyone except as described in this Privacy Policy.The terms
        used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is
        accessible at Adventure Services unless otherwise defined in this Privacy Policy.</string>

    <string name="info_collect">For a better experience, while using our Service, we may require you
        to provide us with certain personally identifiable information. The information that we request
        will be retained by us and used as described in this privacy policy.The app does use third party
        services that may collect information used to identify you.Link to privacy policy of third party
        service providers used by the app</string>

    <string name="playstore_link">\u25CF  http://play.google.com/store/apps/details?id=rafting.masti.rishikesh.holiday.adventure.bailiwick.com.adventure</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="communicate">Communicate</string>
    <string name="order">Order</string>
    <string name="enquiry">Enquiry</string>
    <string name="query">Query</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy">Privacy Policy</string>
    <string name="welcome">Welcome :</string>
    <string name="other_services">Other Services</string>
    <string name="services">Services</string>
    <string name="my_booking">My Booking</string>
    <string name="biking">Biking</string>
    <string name="cycling">Cycling</string>
    <string name="bungy">Bungy</string>
    <string name="select_date">Select Date</string>

</resources>
